--- a/cci.cabal
+++ b/cci.cabal
@@ -6,6 +6,10 @@ Description:  The CCI project is an open-source communication interface that
 			  scalability for the largest deployments, and robustness in the 
 			  presence of faults. It is developed and maintained by a 
 			  partnership of research, academic, and industry members.
+			  .
+
+              See <http://www.olcf.ornl.gov/center-projects/common-communication-interface> 
+			  for details.
 
 License:             AllRightsReserved
 -- License-file:        COPYING
