Adds copyright information and sets license to GPLv2.

--- a/cci.cabal
+++ b/cci.cabal
@@ -1,3 +1,21 @@
+--
+-- Copyright (C) 2012 Parallel Scientific 
+--
+-- This file is part of cci-haskell.
+--
+-- cci-haskell is free software: you can redistribute it and/or modify
+-- it under the terms of the GNU General Public License Version 2 as 
+-- published by the Free Software Foundation.
+--
+-- cci-haskell is distributed in the hope that it will be useful,
+-- but WITHOUT ANY WARRANTY; without even the implied warranty of
+-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+-- GNU General Public License for more details.
+--
+-- You should have received a copy of the GNU General Public License
+-- along with cci-haskell.  If not, see <http://www.gnu.org/licenses/>.
+--
+
 Name:         cci
 Version:      0.0.1
 Synopsis:     Bindings for the CCI networking library
@@ -10,8 +28,8 @@ Description:  The CCI project is an open-source communication interface that
               See <http://www.olcf.ornl.gov/center-projects/common-communication-interface> 
               for details.
 
-License:             AllRightsReserved
--- License-file:        COPYING
+License:             GPL-2
+License-file:        COPYING
 Author:              Facundo Domínguez, Parallel Scientific LLC
 Maintainer:          Facundo Domínguez <facundo.dominguez@parsci.com>
 Category:            Network
