--- a/cci.cabal
+++ b/cci.cabal
@@ -1,19 +1,7 @@
 --
--- Copyright (C) 2012 Parallel Scientific 
+-- Copyright (C) 2012 Parallel Scientific. All rights reserved.
 --
--- This file is part of cci-haskell.
---
--- cci-haskell is free software: you can redistribute it and/or modify
--- it under the terms of the GNU General Public License Version 2 as 
--- published by the Free Software Foundation.
---
--- cci-haskell is distributed in the hope that it will be useful,
--- but WITHOUT ANY WARRANTY; without even the implied warranty of
--- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
--- GNU General Public License for more details.
---
--- You should have received a copy of the GNU General Public License
--- along with cci-haskell.  If not, see <http://www.gnu.org/licenses/>.
+-- See the accompanying COPYING file for license information.
 --
 
 Name:         cci
@@ -28,7 +16,7 @@ Description:  The CCI project is an open-source communication interface that
               See <http://www.olcf.ornl.gov/center-projects/common-communication-interface> 
               for details.
 
-License:             GPL-2
+License:             BSD3
 License-file:        COPYING
 Author:              Facundo Domínguez, Parallel Scientific LLC
 Maintainer:          Facundo Domínguez <facundo.dominguez@parsci.com>
