--- a/cci.cabal
+++ b/cci.cabal
@@ -42,35 +42,80 @@ Library
                        , bytestring
                        
   ghc-options:      -O -Wall
-  extra-libraries:  cci
+
+  if flag(static-verbs)
+    include-dirs:   cci/include, cci/src
+    c-sources:
+                    cci/src/plugins/base/init.c
+                    cci/src/plugins/base/open.c
+                    cci/src/plugins/base/close.c
+
+                    cci/src/plugins/core/base/verify.c
+                    cci/src/plugins/core/base/close.c
+
+                    core_base_open.c
+                    cci/src/plugins/core/verbs/core_verbs_module.c
+                    cci/src/plugins/core/verbs/core_verbs_api.c
+
+                    cci/src/api/arm_os_handle.c
+                    cci/src/api/rma_register.c
+                    cci/src/api/init.c
+                    cci/src/api/send.c
+                    cci/src/api/create_endpoint.c
+                    cci/src/api/rma.c
+                    cci/src/api/return_event.c
+                    cci/src/api/accept.c
+                    cci/src/api/get_devices.c
+                    cci/src/api/set_opt.c
+                    cci/src/api/strerror.c
+                    cci/src/api/free_devices.c
+                    cci/src/api/connect.c
+                    cci/src/api/get_opt.c
+                    cci/src/api/sendv.c
+                    cci/src/api/get_event.c
+                    cci/src/api/reject.c
+                    cci/src/api/destroy_endpoint.c
+                    cci/src/api/disconnect.c
+                    cci/src/api/rma_deregister.c
+
+                    cci/src/util/argv.c
+
+    extra-libraries:  ltdl, rdmacm
+  else
+    extra-libraries:  cci
+
 
 Flag examples
   Description: Build examples
   Default: False
 
+Flag static-verbs
+  Description: Builds cci statically and makes it load the verbs driver exclusively.
+  Default: False
+
 Executable ex-client
   main-is:        examples/Client.hs
   ghc-options:    -O -Wall -idist/build
-  if !flag(examples)
-    buildable: False
-  else
+  if flag(examples)
     build-depends:  base, bytestring, cci
+  else
+    buildable: False
 
 Executable ex-pingpong
   main-is:        examples/pingpong.hs
   ghc-options:    -O -Wall -idist/build
-  if !flag(examples)
-    buildable: False
-  else
+  if flag(examples)
     build-depends:  base, bytestring, cci, time
+  else
+    buildable: False
 
 Executable ex-server
   main-is:        examples/Server.hs
   ghc-options:    -O -Wall -idist/build
-  if !flag(examples)
-    buildable: False
-  else
+  if flag(examples)
     build-depends:  base, bytestring, cci
+  else
+    buildable: False
 
 Test-Suite test-cci
   type:           exitcode-stdio-1.0
