--- a/cci.cabal
+++ b/cci.cabal
@@ -51,8 +51,8 @@ Library
                     cci/src/plugins/base/open.c
                     cci/src/plugins/base/close.c
 
-                    cci/src/plugins/core/base/verify.c
-                    cci/src/plugins/core/base/close.c
+                    cci/src/plugins/ctp/base/verify.c
+                    cci/src/plugins/ctp/base/close.c
 
                     cci/src/api/arm_os_handle.c
                     cci/src/api/rma_register.c
@@ -79,16 +79,16 @@ Library
 
   if flag(static-verbs)
     c-sources:
-                    core_base_open_verbs.c
-                    cci/src/plugins/core/verbs/core_verbs_module.c
-                    cci/src/plugins/core/verbs/core_verbs_api.c
+                    ctp_base_open_verbs.c
+                    cci/src/plugins/ctp/verbs/ctp_verbs_module.c
+                    cci/src/plugins/ctp/verbs/ctp_verbs_api.c
 
   else
    if flag(static-sock)
     c-sources:
-                    core_base_open_sock.c
-                    cci/src/plugins/core/sock/core_sock_module.c
-                    cci/src/plugins/core/sock/core_sock_api.c
+                    ctp_base_open_sock.c
+                    cci/src/plugins/ctp/sock/ctp_sock_module.c
+                    cci/src/plugins/ctp/sock/ctp_sock_api.c
    else
     extra-libraries:  cci
 
