--- a/cci.cabal
+++ b/cci.cabal
@@ -137,7 +137,7 @@ Executable test-cci
   ghc-options:    -O -Wall -fno-warn-name-shadowing -idist/build
   if flag(tests)
     build-depends:  base<4.6, bytestring<0.10, cci, containers<0.5, binary<0.6, process<1.2
-                  , filepath<1.4, mtl<2.1, random >= 1.0.1.0 && < 1.1, cmdargs<0.10, pretty<1.2
+                  , filepath<1.4, mtl, random >= 1.0.1.0 && < 1.1, cmdargs<0.11, pretty<1.2
   else
     buildable: False
 
