--- a/cci.cabal
+++ b/cci.cabal
@@ -1,10 +1,10 @@
 Name:         cci
 Version:      0.3.0
 Synopsis:     Bindings for the CCI networking library
-Description:  The CCI project is an open-source communication interface that 
-              aims to provide a simple and portable API, high performance, 
-              scalability for the largest deployments, and robustness in the 
-              presence of faults. It is developed and maintained by a 
+Description:  The CCI project is an open source communication interface that
+              aims to provide a simple and portable API, high performance,
+              scalability for the largest deployments, and robustness in the
+              presence of faults. It is developed and maintained by a
               partnership of research, academic, and industry members.
               .
               See <http://cci-forum.com> for details.
