--- a/cci.cabal
+++ b/cci.cabal
@@ -11,7 +11,7 @@ Description:   The CCI project is an open source communication interface that
 Copyright:     (C) 2012-2013 Parallel Scientific Labs, LLC
 Maintainer:    Facundo Domínguez <facundo.dominguez@parsci.com>
 License:       BSD3
-License-file:  COPYING
+License-file:  LICENSE
 Category:      Network
 Build-Type:    Simple
 Cabal-Version: >= 1.8
