--- a/cci.cabal
+++ b/cci.cabal
@@ -18,7 +18,7 @@ Cabal-Version: >= 1.10
 
 source-repository head
     type:     git
-    location: git://github.com/ps-labs/haskell-cci
+    location: git://github.com/ps-labs/haskell-cci.git
 
 Library
   default-language: Haskell2010
