--- a/cci.cabal
+++ b/cci.cabal
@@ -7,7 +7,8 @@ Description:   The CCI project is an open source communication interface that
                presence of faults. It is developed and maintained by a
                partnership of research, academic, and industry members.
                .
-               See <http://cci-forum.com> for details.
+               See <https://www.olcf.ornl.gov/center-projects/common-communication-interface/>
+               and <https://github.com/CCI/cci> for details.
 Copyright:     (C) 2012-2013 Parallel Scientific Labs, LLC
 Maintainer:    Facundo Domínguez <facundo.dominguez@parsci.com>
 License:       BSD3
